CSS change to prevent repository dropdown occasionally hiding behind viewer

--- a/client/stylesheets/global.less
+++ b/client/stylesheets/global.less
@@ -17,6 +17,8 @@ body {
   color: #666;
   line-height: 1.5;
   background: @colorBackground;
+  /* Hack to make sure repository dropdown doesn't hide behind content when tooltipster open. */
+  overflow-x: visible !important;
 }
 
 img {
